--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Constrution Site</title>
+    <title>Constox - Constrution Site</title>
     <link rel="icon" href="./images/web-icon.png">
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <linkrel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
   </head>
@@ -118,12 +119,12 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img src="./images/building-1.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-none d-md-block">
-                    <h6 class="sub-title">GREAT EXPERIENCE IN BUILDING</h6>
-                    <h1>we are the leader in <span class="colored">construction</span> company</h1>
-                    <p>There are many variations of passages available but the majority
+                <div class="carousel-caption d-none d-md-block intro-carousel-contents">
+                    <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
+                    <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
+                    <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
                          have suffered alteration in some form by injected humour or randomised words.</p>
-                    <div class="button-section">
+                    <div class="button-section animate__animated animate__fadeInUp">
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #FF631B; border:none;"><a href="#"><h6>CONTACT US</h6></a></button>
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #171B2A; border:none;"><a href="#"><h6>ABOUT US</h6></a></button>
                     </div>
@@ -131,12 +132,12 @@
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./images/construction-1.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-none d-md-block">
-                    <h6 class="sub-title">GREAT EXPERIENCE IN BUILDING</h6>
-                    <h1>we are the leader in <span class="colored">construction</span> company</h1>
-                    <p>There are many variations of passages available but the majority
+                <div class="carousel-caption d-none d-md-block intro-carousel-contents">
+                    <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
+                    <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
+                    <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
                          have suffered alteration in some form by injected humour or randomised words.</p>
-                    <div class="button-section">
+                    <div class="button-section animate__animated animate__fadeInUp">
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #FF631B; border:none;"><a href="#"><h6>CONTACT US</h6></a></button>
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #171B2A; border:none;"><a href="#"><h6>ABOUT US</h6></a></button>
                     </div>
@@ -144,12 +145,12 @@
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./images/construction-2.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-none d-md-block">
-                    <h6 class="sub-title">GREAT EXPERIENCE IN BUILDING</h6>
-                    <h1>we are the leader in <span class="colored">construction</span> company</h1>
-                    <p>There are many variations of passages available but the majority
+                <div class="carousel-caption d-none d-md-block intro-carousel-contents">
+                    <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
+                    <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
+                    <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
                          have suffered alteration in some form by injected humour or randomised words.</p>
-                    <div class="button-section">
+                    <div class="button-section animate__animated animate__fadeInUp">
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #FF631B; border:none;"><a href="#"><h6>CONTACT US</h6></a></button>
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #171B2A; border:none;"><a href="#"><h6>ABOUT US</h6></a></button>
                     </div>
@@ -626,12 +627,12 @@
                 <div class="quick-links">
                     <h5>Quick Links</h5>
                     <h6><span class="colored">____ ______</span></h6>
-                    <a href="#">▸ About Us</a>
+                    <a href="./pages/about.html">▸ About Us</a>
                     <a href="#">▸ FAQ's</a>
                     <a href="#">▸ Terms Of Service</a>
                     <a href="#">▸ Privacy Policy</a>
-                    <a href="#">▸ Our Sevices</a>
-                    <a href="#">▸ Latest Blog</a>
+                    <a href="./pages/services.html">▸ Our Sevices</a>
+                    <a href="./pages/blog.html">▸ Latest Blog</a>
                 </div>
             </div>
             <div class="col-2 third-footer-col p-5">
@@ -652,7 +653,7 @@
                     <h6><span class="colored">____ ______</span></h6>
                     <p style="margin: 20px 50px 20px -10px; font-size: smaller;">Subscribe Our Newsletter To Get Latest Update And News</p>
                     <input class="mt-3" type="email" name="" id="" placeholder="Your Email">
-                    <button class="basic-button text-nowrap mt-4"><h6>SUBSCRIBE NOW ➤</h6></button>
+                    <button class="footer-button mt-4"><h6>SUBSCRIBE NOW ➤</h6></button>
                 </div>    
             </div>
         </div>
