--- a/pages/about.html
+++ b/pages/about.html
@@ -230,6 +230,15 @@
                             <h5>Malissa Fierro</h5>
                             <p>PROJECT MANAGER</p>
                         </div>
+                        <span class="orange-bar">
+                            <div class="orange-bar-icons">
+                                <img src="./images/facebook.png" alt="">
+                                <img src="./images/twitter.png" alt="">
+                                <img src="./images/instagram.png" alt="">
+                                <img src="./images/linkedin.png" alt="">
+                                <img src="./images/whatsapp.png" alt="">
+                            </div>
+                        </span>
                     </div>
                     <div class="team-member">
                         <img src="../images/person-02.jpg" alt="">
@@ -237,6 +246,15 @@
                             <h5>Arron Rodri</h5>
                             <p>PROJECT MANAGER</p>
                         </div>
+                        <span class="orange-bar">
+                            <div class="orange-bar-icons">
+                                <img src="./images/facebook.png" alt="">
+                                <img src="./images/twitter.png" alt="">
+                                <img src="./images/instagram.png" alt="">
+                                <img src="./images/linkedin.png" alt="">
+                                <img src="./images/whatsapp.png" alt="">
+                            </div>
+                        </span>
                     </div>
                     <div class="team-member">
                         <img src="../images/person-03.jpg" alt="">
@@ -244,6 +262,15 @@
                             <h5>Chad Smith</h5>
                             <p>PROJECT MANAGER</p>
                         </div>
+                        <span class="orange-bar">
+                            <div class="orange-bar-icons">
+                                <img src="./images/facebook.png" alt="">
+                                <img src="./images/twitter.png" alt="">
+                                <img src="./images/instagram.png" alt="">
+                                <img src="./images/linkedin.png" alt="">
+                                <img src="./images/whatsapp.png" alt="">
+                            </div>
+                        </span>
                     </div>
                     <div class="team-member">
                         <img src="../images/person-04.jpg" alt="">
@@ -251,6 +278,15 @@
                             <h5>Tony Pinto</h5>
                             <p>PROJECT MANAGER</p>
                         </div>
+                        <span class="orange-bar">
+                            <div class="orange-bar-icons">
+                                <img src="./images/facebook.png" alt="">
+                                <img src="./images/twitter.png" alt="">
+                                <img src="./images/instagram.png" alt="">
+                                <img src="./images/linkedin.png" alt="">
+                                <img src="./images/whatsapp.png" alt="">
+                            </div>
+                        </span>
                     </div>
                 </div>
             </div>
