--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     <div class="container-fluid">
         <!-- !contact bar -->
-        <div class="row header-container">
-            <div class="col-8">
+        <div class="row header-container align-items-center">
+            <div class="col-12 col-md-8 contact-text">
                 <h5>🏠︎ 25/B Milford Road, New York</h5>
                 <h5>☎︎ +2 123 654 7898</h5>
                 <h5>✉︎ info@example.com</h5>
             </div>
-            <div class="col-4 icon-holder">
+            <div class="col-12 col-md-4 text-md-end icon-holder">
                 <img src="./images/facebook.png" alt="">
                 <img src="./images/twitter.png" alt="">
                 <img src="./images/instagram.png" alt="">
@@ -119,11 +119,17 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img src="./images/building-1.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-none d-md-block intro-carousel-contents">
-                    <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
-                    <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
-                    <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
-                         have suffered alteration in some form by injected humour or randomised words.</p>
+                <div class="carousel-caption d-block intro-carousel-contents">
+                    <div class="container">
+                        <div class="row">
+                           <div class="col-12 col-lg-6">
+                                <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
+                                <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
+                                <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
+                                    have suffered alteration in some form by injected humour or randomised words.</p>
+                           </div>
+                        </div>
+                     </div>
                     <div class="button-section animate__animated animate__fadeInUp">
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #FF631B; border:none;"><a href="#"><h6>CONTACT US</h6></a></button>
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #171B2A; border:none;"><a href="#"><h6>ABOUT US</h6></a></button>
@@ -132,11 +138,17 @@
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./images/construction-1.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-none d-md-block intro-carousel-contents">
-                    <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
-                    <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
-                    <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
-                         have suffered alteration in some form by injected humour or randomised words.</p>
+                <div class="carousel-caption d-block intro-carousel-contents">
+                    <div class="container">
+                        <div class="row">
+                           <div class="col-12 col-lg-6">
+                                <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
+                                <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
+                                <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
+                                    have suffered alteration in some form by injected humour or randomised words.</p>
+                           </div>
+                        </div>
+                     </div>
                     <div class="button-section animate__animated animate__fadeInUp">
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #FF631B; border:none;"><a href="#"><h6>CONTACT US</h6></a></button>
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #171B2A; border:none;"><a href="#"><h6>ABOUT US</h6></a></button>
@@ -145,11 +157,17 @@
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./images/construction-2.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-none d-md-block intro-carousel-contents">
-                    <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
-                    <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
-                    <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
-                         have suffered alteration in some form by injected humour or randomised words.</p>
+                <div class="carousel-caption d-block intro-carousel-contents">
+                    <div class="container">
+                        <div class="row">
+                           <div class="col-12 col-lg-6">
+                                <h6 class="sub-title animate__animated animate__fadeInUp">GREAT EXPERIENCE IN BUILDING</h6>
+                                <h1 class="animate__animated animate__fadeInUp">we are the leader in <span class="colored">construction</span> company</h1>
+                                <p class="animate__animated animate__fadeInUp">There are many variations of passages available but the majority
+                                    have suffered alteration in some form by injected humour or randomised words.</p>
+                           </div>
+                        </div>
+                     </div>
                     <div class="button-section animate__animated animate__fadeInUp">
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #FF631B; border:none;"><a href="#"><h6>CONTACT US</h6></a></button>
                         <button class="btn btn-primary slider-button text-nowrap" style="background-color: #171B2A; border:none;"><a href="#"><h6>ABOUT US</h6></a></button>
@@ -168,28 +186,34 @@
         </div>
         <!-- !about us -->
         <div class="row">
-            <div class="col-5 p-5 m-3 ms-5 aboutUsImg">
-                <img src="./images/construction-workers.jpg" alt=""">
-                <div class="decor-div-square"></div>
-                <div class="decor-div-dots"></div>
-                <div class="decor-div-number">
-                    <h1>25 +</h1>
-                    <p>Years Of Experience</p>
+            <div class="container-fluid">
+                <div class="row align-items-center m-4">           
+                  <div class="col-12 col-lg-6 aboutUsImg px-5 my-5 img-fluid">
+                    <img src="./images/construction-workers.jpg" alt=""">
+                    <div class="decor-div-square"></div>
+                    <div class="decor-div-dots"></div>
+                    <div class="decor-div-number">
+                        <h1>25 +</h1>
+                        <p>Years Of Experience</p>
+                    </div>
+                  </div>
+            
+                  <div class="col-12 col-lg-6 aboutUsInfo">
+                    <h6 class="mini_title">About Us _______</h6>
+                    <h1 style="font-weight: 800;">We Are Expert <span class="colored">For Construction</span> Solutions</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have 
+                        suffered alteration in some form, by injected humour, or randomised words which don't look even.
+                    </p>
+                    <ul>
+                        <li><img src="./images/accept.png" class="custom-bullet" alt="">Take a look at our round up of the best shows</li>
+                        <li><img src="./images/accept.png" class="custom-bullet" alt="">It has survived not only five centuries</li>
+                        <li><img src="./images/accept.png" class="custom-bullet" alt="">Lorem Ipsum has been the ndustry standard dummy text</li>
+                    </ul>
+                    <button class="basic-button text-nowrap"><h6>Discover more➤</h6></button>
+                  </div>
+            
                 </div>
-            </div>
-            <div class="col-5 aboutUsInfo p-5 m-5">
-                <h6 class="mini_title">About Us _______</h6>
-                <h1 style="font-weight: 800;">We Are Expert <span class="colored">For Construction</span> Solutions</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have 
-                    suffered alteration in some form, by injected humour, or randomised words which don't look even.
-                </p>
-                <ul>
-                    <li><img src="./images/accept.png" class="custom-bullet" alt="">Take a look at our round up of the best shows</li>
-                    <li><img src="./images/accept.png" class="custom-bullet" alt="">It has survived not only five centuries</li>
-                    <li><img src="./images/accept.png" class="custom-bullet" alt="">Lorem Ipsum has been the ndustry standard dummy text</li>
-                </ul>
-                <button class="basic-button text-nowrap"><h6>Discover more➤</h6></button>
-            </div>
+              </div>
         </div>
         <!-- !services -->
         <div class="services-section">
@@ -330,27 +354,35 @@
             </div>
         </div>
         <!-- !video -->
-        <div class="video-section">
-            <div class="info-container">
-                <div class="sub-info">
-                    <img src="./images/construction-site.png" alt="">
-                    <h1>500</h1>
-                    <h4>+ Project Done</h4>
+        <div class="container-fluid video-section">
+            <div class="row info-container text-center mx-lg-5">
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="sub-info">
+                        <img src="./images/construction-site.png" alt="">
+                        <h1>500</h1>
+                        <h4>+ Project Done</h4>
+                    </div>
                 </div>
-                <div class="sub-info">
-                    <img src="./images/design.png" alt="">
-                    <h1>250</h1>
-                    <h4>+ Satisfied Clients</h4>
+                <div class="col-12 col-sm-6 col-lg-3">    
+                    <div class="sub-info">
+                        <img src="./images/design.png" alt="">
+                        <h1>250</h1>
+                        <h4>+ Satisfied Clients</h4>
+                    </div>
                 </div>
-                <div class="sub-info">
-                    <img src="./images/workers.png" alt="">
-                    <h1>120</h1>
-                    <h4>+ Active Employee</h4>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="sub-info">
+                        <img src="./images/workers.png" alt="">
+                        <h1>120</h1>
+                        <h4>+ Active Employee</h4>
+                    </div>
                 </div>
-                <div class="sub-info">
-                    <img src="./images/customer-service.png" alt="">
-                    <h1>300</h1>
-                    <h4>+ Total Support</h4>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <div class="sub-info">
+                        <img src="./images/customer-service.png" alt="">
+                        <h1>300</h1>
+                        <h4>+ Total Support</h4>
+                    </div>
                 </div>
             </div>
         </div>
