--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h5>☎︎ +2 123 654 7898</h5>
                 <h5>✉︎ info@example.com</h5>
             </div>
-            <div class="col-12 col-md-4 text-md-end icon-holder">
+            <div class="col-12 col-md-4 text-sm-center icon-holder">
                 <img src="./images/facebook.png" alt="">
                 <img src="./images/twitter.png" alt="">
                 <img src="./images/instagram.png" alt="">
@@ -137,7 +137,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img src="./images/building-1.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-block intro-carousel-contents">
+                <div class="carousel-caption d-block intro-carousel-contents mb-5 ms-sm-5 ms-md-5">
                     <div class="container">
                         <div class="row">
                            <div class="col-12 col-lg-6">
@@ -156,7 +156,7 @@
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./images/construction-1.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-block intro-carousel-contents">
+                <div class="carousel-caption d-block intro-carousel-contents mb-5 ms-sm-5 ms-md-5">
                     <div class="container">
                         <div class="row">
                            <div class="col-12 col-lg-6">
@@ -175,7 +175,7 @@
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="./images/construction-2.jpg" class="d-block w-100" alt="" style="height: 100vh;">
-                <div class="carousel-caption d-block intro-carousel-contents">
+                <div class="carousel-caption d-block intro-carousel-contents mb-5 ms-sm-5 ms-md-5">
                     <div class="container">
                         <div class="row">
                            <div class="col-12 col-lg-6">
@@ -703,7 +703,7 @@
         </div>
         <!-- !footer -->
         <div class="footer-section row">
-            <div class="col-5 first-footer-col p-5">
+            <div class="col-lg-5 col-md-6 col-12 first-footer-col p-4">
                 <div class="first-foot-contents">
                     <img src="./images/footer-logo.png" alt="">
                     <p style="margin: 20px 50px 20px auto; font-size: smaller;">We are many variations of passages available but the 
@@ -719,7 +719,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-2 seconf-footer-col p-5">
+            <div class="col-lg-2 col-md-6 col-12 seconf-footer-col p-4">
                 <div class="quick-links">
                     <h5>Quick Links</h5>
                     <h6><span class="colored">____ ______</span></h6>
@@ -731,7 +731,7 @@
                     <a href="./pages/blog.html">▸ Latest Blog</a>
                 </div>
             </div>
-            <div class="col-2 third-footer-col p-5">
+            <div class="col-lg-2 col-md-6 col-12 third-footer-col p-4">
                 <div class="our-services-links">
                     <h5>Our Services</h5>
                     <h6><span class="colored">____ ______</span></h6>
@@ -743,7 +743,7 @@
                     <a href="#">▸ Building Sustainability</a>
                 </div>
             </div>
-            <div class="col-3 forth-footer-col p-5">
+            <div class="col-lg-3 col-md-6 col-12 forth-footer-col p-4">
                 <div class="newsletter">
                     <h5>Newsletter</h5>
                     <h6><span class="colored">____ ______</span></h6>
