--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </ul>
                 </div>
         
-                <div class="d-flex align-items-center me-3">
+                <div class="d-flex align-items-center me-3 d-none d-lg-block">
                     <button class="btn me-3">🔎︎</button>
                     <button class="header-button text-nowrap">
                         GET QUOTE ➤
@@ -616,7 +616,7 @@
         </div>
         <!-- !FAQ -->
         <div class="faq row">
-            <div class="col-6 faq-info p-5">
+            <div class="faq-info p-5 col-12 col-lg-6">
                 <h6 class="mini_title">FAQ's_______</h6>
                 <h1 style="font-weight: 800;">General<span class="colored"> Frequently</span> Asked Questions</h1>
                 <p class="my-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even.
@@ -624,7 +624,7 @@
                     It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <button class="basic-button text-nowrap"><h6>ASK QUESTION➤</h6></button>
             </div>
-            <div class="col-6 faq-collapses p-5">
+            <div class="faq-collapses p-5 col-12 col-lg-6">
                     <button class="btn btn-light w-100 mb-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1" style="text-align: left;">
                       <img src="./images/faq-logo.png" alt="" class="me-2">
                         Do I Need A Business Plan?
