--- a/pages/contact.html
+++ b/pages/contact.html
@@ -123,7 +123,7 @@
                     </ul>
                 </div>
         
-                <div class="d-flex align-items-center me-3">
+                <div class="d-flex align-items-center me-3 d-none d-lg-block">
                     <button class="btn me-3">🔎︎</button>
                     <button class="header-button text-nowrap">
                         GET QUOTE ➤
